# sponza_scene_opengl

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-build.yml
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: deferred_shading.frag.glsl  deferred_shading.vert.glsl  depth.frag.glsl  depth.vert.glsl  g_buffer.frag.glsl  g_buffer.vert.glsl  gaussian.frag.glsl  phong.frag.glsl  phong.vert.glsl  postprocessing.frag.glsl  skybox.frag.glsl  skybox.vert.glsl
src/: App.cpp  App.h  Camera.cpp  Camera.h  DirectionalLight.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Model.h  PointLight.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  main.cpp
